# pseudollm

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pseudollm/: dict-to-schema.py  main.py  process.py
test_data/: en_test.txt  example_tagged.txt  test.txt
